// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, channel display mode section 1`] = `
<div
  id="displaySettings"
>
  <SettingMobileHeader
    closeModal={[MockFunction]}
    collapseModal={[MockFunction]}
    text={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    }
  />
  <div
    className="user-settings"
  >
    <SettingDesktopHeader
      id="displaySettingsTitle"
      text={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Display Settings"
          id="user.settings.display.title"
        />
      }
    />
    <div
      className="divider-dark first"
    />
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        describe={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="On"
            id="user.settings.display.lastActiveOn"
          />
        }
        max={null}
        section="lastactive"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Share last active time"
            id="user.settings.display.lastActiveDisplay"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={true}
        areAllSectionsInactive={false}
        max={
          <SettingItemMax
            containerStyle=""
            extraInfo={null}
            infoPosition="bottom"
            inputs={
              Array [
                <fieldset>
                  <legend
                    className="form-legend hidden-label"
                  >
                    <Memo(MemoizedFormattedMessage)
                      defaultMessage="Channel Display"
                      id="user.settings.display.channelDisplayTitle"
                    />
                  </legend>
                  <div
                    className="radio"
                  >
                    <label>
                      <input
                        checked={false}
                        id="channel_display_modeFormatA"
                        name="channel_display_modeFormat"
                        onChange={[Function]}
                        type="radio"
                      />
                      <Memo(MemoizedFormattedMessage)
                        defaultMessage="Full width"
                        id="user.settings.display.fullScreen"
                      />
                    </label>
                    <br />
                  </div>
                  <div
                    className="radio"
                  >
                    <label>
                      <input
                        checked={false}
                        id="channel_display_modeFormatB"
                        name="channel_display_modeFormat"
                        onChange={[Function]}
                        type="radio"
                      />
                      <Memo(MemoizedFormattedMessage)
                        defaultMessage="Fixed width, centered"
                        id="user.settings.display.fixedWidthCentered"
                      />
                    </label>
                    <br />
                  </div>
                  <div>
                    <br />
                    <Memo(MemoizedFormattedMessage)
                      defaultMessage="Select the width of the center channel."
                      id="user.settings.display.channeldisplaymode"
                    />
                  </div>
                </fieldset>,
              ]
            }
            saving={false}
            section=""
            submit={[Function]}
            title={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Channel Display"
                id="user.settings.display.channelDisplayTitle"
              />
            }
            updateSection={[Function]}
          />
        }
        section="channel_display_mode"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Channel Display"
            id="user.settings.display.channelDisplayTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        max={null}
        section="one_click_reactions_enabled"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Quick reactions on messages"
            id="user.settings.display.oneClickReactionsOnPostsTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, clickToReply section 1`] = `
<div
  id="displaySettings"
>
  <SettingMobileHeader
    closeModal={[MockFunction]}
    collapseModal={[MockFunction]}
    text={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    }
  />
  <div
    className="user-settings"
  >
    <SettingDesktopHeader
      id="displaySettingsTitle"
      text={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Display Settings"
          id="user.settings.display.title"
        />
      }
    />
    <div
      className="divider-dark first"
    />
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        describe={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="On"
            id="user.settings.display.lastActiveOn"
          />
        }
        max={null}
        section="lastactive"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Share last active time"
            id="user.settings.display.lastActiveDisplay"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        max={null}
        section="channel_display_mode"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Channel Display"
            id="user.settings.display.channelDisplayTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        max={null}
        section="one_click_reactions_enabled"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Quick reactions on messages"
            id="user.settings.display.oneClickReactionsOnPostsTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, clock section 1`] = `
<div
  id="displaySettings"
>
  <SettingMobileHeader
    closeModal={[MockFunction]}
    collapseModal={[MockFunction]}
    text={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    }
  />
  <div
    className="user-settings"
  >
    <SettingDesktopHeader
      id="displaySettingsTitle"
      text={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Display Settings"
          id="user.settings.display.title"
        />
      }
    />
    <div
      className="divider-dark first"
    />
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        describe={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="On"
            id="user.settings.display.lastActiveOn"
          />
        }
        max={null}
        section="lastactive"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Share last active time"
            id="user.settings.display.lastActiveDisplay"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        max={null}
        section="channel_display_mode"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Channel Display"
            id="user.settings.display.channelDisplayTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        max={null}
        section="one_click_reactions_enabled"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Quick reactions on messages"
            id="user.settings.display.oneClickReactionsOnPostsTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, collapse section 1`] = `
<div
  id="displaySettings"
>
  <SettingMobileHeader
    closeModal={[MockFunction]}
    collapseModal={[MockFunction]}
    text={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    }
  />
  <div
    className="user-settings"
  >
    <SettingDesktopHeader
      id="displaySettingsTitle"
      text={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Display Settings"
          id="user.settings.display.title"
        />
      }
    />
    <div
      className="divider-dark first"
    />
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        describe={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="On"
            id="user.settings.display.lastActiveOn"
          />
        }
        max={null}
        section="lastactive"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Share last active time"
            id="user.settings.display.lastActiveDisplay"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        max={null}
        section="channel_display_mode"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Channel Display"
            id="user.settings.display.channelDisplayTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        max={null}
        section="one_click_reactions_enabled"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Quick reactions on messages"
            id="user.settings.display.oneClickReactionsOnPostsTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, languages section 1`] = `
<div
  id="displaySettings"
>
  <SettingMobileHeader
    closeModal={[MockFunction]}
    collapseModal={[MockFunction]}
    text={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    }
  />
  <div
    className="user-settings"
  >
    <SettingDesktopHeader
      id="displaySettingsTitle"
      text={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Display Settings"
          id="user.settings.display.title"
        />
      }
    />
    <div
      className="divider-dark first"
    />
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        describe={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="On"
            id="user.settings.display.lastActiveOn"
          />
        }
        max={null}
        section="lastactive"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Share last active time"
            id="user.settings.display.lastActiveDisplay"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        max={null}
        section="channel_display_mode"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Channel Display"
            id="user.settings.display.channelDisplayTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        max={null}
        section="one_click_reactions_enabled"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Quick reactions on messages"
            id="user.settings.display.oneClickReactionsOnPostsTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, link preview section with EnableLinkPreviews is false 1`] = `
<div
  id="displaySettings"
>
  <SettingMobileHeader
    closeModal={[MockFunction]}
    collapseModal={[MockFunction]}
    text={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    }
  />
  <div
    className="user-settings"
  >
    <SettingDesktopHeader
      id="displaySettingsTitle"
      text={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Display Settings"
          id="user.settings.display.title"
        />
      }
    />
    <div
      className="divider-dark first"
    />
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        describe={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="On"
            id="user.settings.display.lastActiveOn"
          />
        }
        max={null}
        section="lastactive"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Share last active time"
            id="user.settings.display.lastActiveDisplay"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        max={null}
        section="channel_display_mode"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Channel Display"
            id="user.settings.display.channelDisplayTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        max={null}
        section="one_click_reactions_enabled"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Quick reactions on messages"
            id="user.settings.display.oneClickReactionsOnPostsTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, link preview section with EnableLinkPreviews is true 1`] = `
<div
  id="displaySettings"
>
  <SettingMobileHeader
    closeModal={[MockFunction]}
    collapseModal={[MockFunction]}
    text={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    }
  />
  <div
    className="user-settings"
  >
    <SettingDesktopHeader
      id="displaySettingsTitle"
      text={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Display Settings"
          id="user.settings.display.title"
        />
      }
    />
    <div
      className="divider-dark first"
    />
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        describe={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="On"
            id="user.settings.display.lastActiveOn"
          />
        }
        max={null}
        section="lastactive"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Share last active time"
            id="user.settings.display.lastActiveDisplay"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        max={null}
        section="channel_display_mode"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Channel Display"
            id="user.settings.display.channelDisplayTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        max={null}
        section="one_click_reactions_enabled"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Quick reactions on messages"
            id="user.settings.display.oneClickReactionsOnPostsTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, message display section 1`] = `
<div
  id="displaySettings"
>
  <SettingMobileHeader
    closeModal={[MockFunction]}
    collapseModal={[MockFunction]}
    text={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    }
  />
  <div
    className="user-settings"
  >
    <SettingDesktopHeader
      id="displaySettingsTitle"
      text={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Display Settings"
          id="user.settings.display.title"
        />
      }
    />
    <div
      className="divider-dark first"
    />
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        describe={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="On"
            id="user.settings.display.lastActiveOn"
          />
        }
        max={null}
        section="lastactive"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Share last active time"
            id="user.settings.display.lastActiveDisplay"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        max={null}
        section="channel_display_mode"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Channel Display"
            id="user.settings.display.channelDisplayTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        max={null}
        section="one_click_reactions_enabled"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Quick reactions on messages"
            id="user.settings.display.oneClickReactionsOnPostsTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, no active section 1`] = `
<div
  id="displaySettings"
>
  <SettingMobileHeader
    closeModal={[MockFunction]}
    collapseModal={[MockFunction]}
    text={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    }
  />
  <div
    className="user-settings"
  >
    <SettingDesktopHeader
      id="displaySettingsTitle"
      text={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Display Settings"
          id="user.settings.display.title"
        />
      }
    />
    <div
      className="divider-dark first"
    />
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={true}
        describe={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="On"
            id="user.settings.display.lastActiveOn"
          />
        }
        max={null}
        section="lastactive"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Share last active time"
            id="user.settings.display.lastActiveDisplay"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={true}
        max={null}
        section="channel_display_mode"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Channel Display"
            id="user.settings.display.channelDisplayTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={true}
        max={null}
        section="one_click_reactions_enabled"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Quick reactions on messages"
            id="user.settings.display.oneClickReactionsOnPostsTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, teammate name display section 1`] = `
<div
  id="displaySettings"
>
  <SettingMobileHeader
    closeModal={[MockFunction]}
    collapseModal={[MockFunction]}
    text={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    }
  />
  <div
    className="user-settings"
  >
    <SettingDesktopHeader
      id="displaySettingsTitle"
      text={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Display Settings"
          id="user.settings.display.title"
        />
      }
    />
    <div
      className="divider-dark first"
    />
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        describe={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="On"
            id="user.settings.display.lastActiveOn"
          />
        }
        max={null}
        section="lastactive"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Share last active time"
            id="user.settings.display.lastActiveDisplay"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        max={null}
        section="channel_display_mode"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Channel Display"
            id="user.settings.display.channelDisplayTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        max={null}
        section="one_click_reactions_enabled"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Quick reactions on messages"
            id="user.settings.display.oneClickReactionsOnPostsTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, theme section with EnableThemeSelection is false 1`] = `
<div
  id="displaySettings"
>
  <SettingMobileHeader
    closeModal={[MockFunction]}
    collapseModal={[MockFunction]}
    text={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    }
  />
  <div
    className="user-settings"
  >
    <SettingDesktopHeader
      id="displaySettingsTitle"
      text={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Display Settings"
          id="user.settings.display.title"
        />
      }
    />
    <div
      className="divider-dark first"
    />
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        describe={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="On"
            id="user.settings.display.lastActiveOn"
          />
        }
        max={null}
        section="lastactive"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Share last active time"
            id="user.settings.display.lastActiveDisplay"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        max={null}
        section="channel_display_mode"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Channel Display"
            id="user.settings.display.channelDisplayTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        max={null}
        section="one_click_reactions_enabled"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Quick reactions on messages"
            id="user.settings.display.oneClickReactionsOnPostsTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, theme section with EnableThemeSelection is true 1`] = `
<div
  id="displaySettings"
>
  <SettingMobileHeader
    closeModal={[MockFunction]}
    collapseModal={[MockFunction]}
    text={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    }
  />
  <div
    className="user-settings"
  >
    <SettingDesktopHeader
      id="displaySettingsTitle"
      text={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Display Settings"
          id="user.settings.display.title"
        />
      }
    />
    <div
      className="divider-dark first"
    />
    <div>
      <Connect(ThemeSetting)
        allowCustomThemes={true}
        areAllSectionsInactive={false}
        selected={true}
        setEnforceFocus={[MockFunction]}
        setRequireConfirm={[MockFunction]}
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        describe={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="On"
            id="user.settings.display.lastActiveOn"
          />
        }
        max={null}
        section="lastactive"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Share last active time"
            id="user.settings.display.lastActiveDisplay"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        max={null}
        section="channel_display_mode"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Channel Display"
            id="user.settings.display.channelDisplayTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        max={null}
        section="one_click_reactions_enabled"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Quick reactions on messages"
            id="user.settings.display.oneClickReactionsOnPostsTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, timezone section 1`] = `
<div
  id="displaySettings"
>
  <SettingMobileHeader
    closeModal={[MockFunction]}
    collapseModal={[MockFunction]}
    text={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    }
  />
  <div
    className="user-settings"
  >
    <SettingDesktopHeader
      id="displaySettingsTitle"
      text={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Display Settings"
          id="user.settings.display.title"
        />
      }
    />
    <div
      className="divider-dark first"
    />
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        describe={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="On"
            id="user.settings.display.lastActiveOn"
          />
        }
        max={null}
        section="lastactive"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Share last active time"
            id="user.settings.display.lastActiveDisplay"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        max={null}
        section="channel_display_mode"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Channel Display"
            id="user.settings.display.channelDisplayTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={false}
        max={null}
        section="one_click_reactions_enabled"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Quick reactions on messages"
            id="user.settings.display.oneClickReactionsOnPostsTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should not show last active section 1`] = `
<div
  id="displaySettings"
>
  <SettingMobileHeader
    closeModal={[MockFunction]}
    collapseModal={[MockFunction]}
    text={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Display Settings"
        id="user.settings.display.title"
      />
    }
  />
  <div
    className="user-settings"
  >
    <SettingDesktopHeader
      id="displaySettingsTitle"
      text={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Display Settings"
          id="user.settings.display.title"
        />
      }
    />
    <div
      className="divider-dark first"
    />
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={true}
        max={null}
        section="channel_display_mode"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Channel Display"
            id="user.settings.display.channelDisplayTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
    <div>
      <SettingItem
        active={false}
        areAllSectionsInactive={true}
        max={null}
        section="one_click_reactions_enabled"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Quick reactions on messages"
            id="user.settings.display.oneClickReactionsOnPostsTitle"
          />
        }
        updateSection={[Function]}
      />
      <div
        className="divider-dark"
      />
    </div>
  </div>
</div>
`;
